Update BG Map due to API fail

--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
         <div class="container">
             <div class="section view">
                 <img src="assets/view.jpg" alt="校园景色">
-                <h2>校园景色</h2>
+                <div style="font-size: 1.5em; font-weight: bold;">校园景色</div>
+                <strong style="color: red">由于Stadia Maps API到期，地图底图已经换成OSM Bright。</strong>
             </div>
             <div class="section life">
                 <img src="assets/life.jpg" alt="校园生活">
-                <h2>校园生活</h2>
+                <div style="font-size: 1.5em; font-weight: bold;">校园生活</div>
+                <strong style="color: red">由于Stadia Maps API到期，地图底图已经换成OSM Bright。</strong>
             </div>
         </div>
         <div class="description">
